--- a/index.html
+++ b/index.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta name=”viewport” content=”width=device-width, initial-scale=1">
-<meta http-equiv=”Content-Type” content=”text/html; charset=utf-8" />
-<title>ระบบลงทะเบียนผู้ใช้งาน</title>
-<script src=”https://d.line-scdn.net/liff/1.0/sdk.js"></script>
-<script src=”lib/jquery-3.3.1.min.js”></script>
-<script src=”lib/bootstrap.min.js”></script>
-<link href=”lib/bootstrap.min.css” rel=”stylesheet” />
-<script>
-//init LIFF
-function initializeApp(data) {
-let urlParams = new URLSearchParams(window.location.search);
-$(‘#name’).val(urlParams.toString());
-$(‘#userid’).val(data.context.userId);
-
-$(‘#UserInfo’).val(profile.displayName);
-}
-//ready
-$(function () {
-//init LIFF
-liff.init(function (data) {
-initializeApp(data);
-});
-//ButtonGetProfile
-$(‘#ButtonGetProfile’).click(function () {
-liff.getProfile().then(
-profile=> {
-$(‘#UserInfo’).val(profile.displayName);
-alert(‘done’);
-}
-);
-});
-//ButtonSendMsg #QueryString
-$(‘#ButtonSendMsg’).click(function () {
-liff.sendMessages([
-{
-type: ‘text’,
-// text: $(‘#userid’).val() + $(‘#QueryString’).val() + $(‘#msg’).val()
-text: $(‘คุณเคยลงทะเบียนแล้ว’).val()
-}
-])
-.then(() => {
-alert(‘done’);
-})
-});
-});
-</script>
+  <title><?php echo $this->lang->line("แบบฟอร์มลงทะเบียน");?></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <!-- <?php $this->load->view('css'); ?> -->
 </head>
 <body>
-<form action=”save.php” method=”get”>
-<div class=”row”>
-<div class=”col-md-6" style=”margin:5px”>
-<input class=”form-control” type=”hidden” id=”userid” name=”userid” /> <br />
-<label>ชื่อนามสกุล</label>
-<input class=”form-control” type=”text” id=”name” name=”name”/><br />
-<label>สำนัก:</label>
-<input class=”form-control” type=”text” id=”samnak” name=”samnak” /><br />
-<! — <button class=”btn btn-primary” id=”ButtonSendMsg” >ลงทะเบียน</button> →
-<button class=”btn btn-primary” >ลงทะเบียน</button>
-</div>
-</div>
-</form>
+  <div class="container">
+      <div style="padding: 25px; text-align: center;">
+        <h2>แบบฟอร์มลงทะเบียน</h2>
+      </div>
+      <form id="registerLine" class="form-horizontal" name="registerLine"  method="post"  action=""  >
+        <div class="box-body" style="padding: 25px;">
+        <div class="form-group row">
+          <label for="codeStu" class="col-sm-2 col-form-label"><a>รหัสนักศึกษา : </a></label>
+          <div class="col-sm-10">
+            <input type="number" class="form-control" id="codeStu" placeholder="กรอกรหัสนักศึกษา" name="codeStu">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="emailStu" class="col-sm-2 col-form-label">E-mail : </label>
+          <div class="col-sm-10">
+             <input type="text" class="form-control" id="emailStu" name="emailStu" placeholder="กรอก email">
+          </div>
+        </div>
+        <div style="text-align: center;">
+          <button type="button" class="btn btn-success">ลงทะเบียน</button>
+        </div>
+       </div>
+      </form>
+  </div>
+
 </body>
 </html>
+
+<!-- <?php $this->load->view('script'); ?> -->
+<script type="text/javascript">
+
+  function checkEmail(str){
+    var emailFilter=/^.+@.+\..{2,3}$/;
+    if (!(emailFilter.test(str))) { 
+      show_alert("<?php echo $this->lang->line('ท่านใส่อีเมล์ไม่ถูกต้อง');?>");
+          $(this).prop("disabled",false);
+      return false;
+    }
+    return true;
+  }
+
+  $(".btn-success").click(function(){
+    var email  = $.trim($("#email").val());
+    var isError  = $("#registerLine").valid();
+
+    var cEmail =  checkEmail(email);
+    console.log(email);
+    if(cEmail == false){
+        $(this).prop("disabled",false);
+    }else{
+       if (isError){
+            var url = $('#registerLine').attr("action");
+            var posturl = url;
+            $('#registerLine').attr('action', posturl);
+            $('#registerLine').submit();
+            $(this).prop("disabled",false);
+          } else {
+            $("html, body").stop().animate({ scrollTop: $('label.error:not(:hidden):first').offset().top - 100 }, 500);
+            $(this).prop("disabled",false);
+          }
+    }
+  });
+
+</script>
