--- a/RegisterFormView2.html
+++ b/RegisterFormView2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name=”viewport” content=”width=device-width, initial-scale=1">
-<meta http-equiv=”Content-Type” content=”text/html; charset=utf-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>ระบบลงทะเบียนผู้ใช้งาน</title>
 <script src=”https://d.line-scdn.net/liff/1.0/sdk.js"></script>
 <script src=”lib/jquery-3.3.1.min.js”></script>
@@ -49,16 +49,16 @@ alert(‘done’);
 </script>
 </head>
 <body>
-<form action=”save.php” method=”get”>
-<div class=”row”>
-<div class=”col-md-6" style=”margin:5px”>
-<input class=”form-control” type=”hidden” id=”userid” name=”userid” /> <br />
+<form action="save.php" method="get">
+<div class="row">
+<div class="col-md-6" style="margin:5px">
+<input class="form-control" type="hidden" id="userid" name="userid" /> <br />
 <label>ชื่อนามสกุล</label>
-<input class=”form-control” type=”text” id=”name” name=”name”/><br />
+<input class="form-control" type="text" id="name" name="name"/><br />
 <label>สำนัก:</label>
-<input class=”form-control” type=”text” id=”samnak” name=”samnak” /><br />
-<! — <button class=”btn btn-primary” id=”ButtonSendMsg” >ลงทะเบียน</button> →
-<button class=”btn btn-primary” >ลงทะเบียน</button>
+<input class="form-control" type="text" id="samnak" name="samnak" /><br />
+<! — <button class="btn btn-primary" id="ButtonSendMsg" >ลงทะเบียน</button> →
+<button class="btn btn-primary" >ลงทะเบียน</button>
 </div>
 </div>
 </form>
